--- a/public/index.html
+++ b/public/index.html
@@ -85,137 +85,7 @@
   <div class="row" style="display: inline-block; width: 100%">
     <div class="col-10" style="float: left">
 
-      <div style="display: inline">
-
-        <div class="card" style="width: 300px; height: 400px; text-align: center">
-          <img class="card-img-top" style="width: 70%" src="polar.jpg" alt="Card image cap">
-          <div class="card-body">
-            <h5 class="card-title">100% Natural Seltzer Jr</h5>
-            <p class="card-title" style="margin-top: -15px;">Original * 12 x 1L</p>
-            <h3 style="font-weight: bold; color: #00b8a4; margin-top: -10px;">$9.99</h3>
-            <a href="#" class="btn btn-primary" style="display: inline-block; font-weight: bold">Add to Cart</a>
-            <a href="#" class="btn btn-primary" style="display: inline-block; width: 42px">
-              <i class="fas fa-heart"></i>
-            </a>
-          </div>
-        </div>
-
-        <div class="card" style="width: 300px; height: 400px; text-align: center">
-          <img class="card-img-top" style="width: 70%" src="polar.jpg" alt="Card image cap">
-          <div class="card-body">
-            <h5 class="card-title">100% Natural Seltzer Jr</h5>
-            <p class="card-title" style="margin-top: -15px;">Original * 12 x 1L</p>
-            <h3 style="font-weight: bold; color: #00b8a4; margin-top: -10px;">$9.99</h3>
-            <a href="#" class="btn btn-primary" style="display: inline-block; font-weight: bold">Add to Cart</a>
-            <a href="#" class="btn btn-primary" style="display: inline-block; width: 42px">
-              <i class="fas fa-heart"></i>
-            </a>
-          </div>
-        </div>
-
-        <div class="card" style="width: 300px; height: 400px; text-align: center">
-          <img class="card-img-top" style="width: 70%" src="polar.jpg" alt="Card image cap">
-          <div class="card-body">
-            <h5 class="card-title">100% Natural Seltzer Jr</h5>
-            <p class="card-title" style="margin-top: -15px;">Original * 12 x 1L</p>
-            <h3 style="font-weight: bold; color: #00b8a4; margin-top: -10px;">$9.99</h3>
-            <a href="#" class="btn btn-primary" style="display: inline-block; font-weight: bold">Add to Cart</a>
-            <a href="#" class="btn btn-primary" style="display: inline-block; width: 42px">
-              <i class="fas fa-heart"></i>
-            </a>
-          </div>
-        </div>
-
-        <div class="card" style="width: 300px; height: 400px; text-align: center">
-          <img class="card-img-top" style="width: 70%" src="polar.jpg" alt="Card image cap">
-          <div class="card-body">
-            <h5 class="card-title">100% Natural Seltzer Jr</h5>
-            <p class="card-title" style="margin-top: -15px;">Original * 12 x 1L</p>
-            <h3 style="font-weight: bold; color: #00b8a4; margin-top: -10px;">$9.99</h3>
-            <a href="#" class="btn btn-primary" style="display: inline-block; font-weight: bold">Add to Cart</a>
-            <a href="#" class="btn btn-primary" style="display: inline-block; width: 42px">
-              <i class="fas fa-heart"></i>
-            </a>
-          </div>
-        </div>
-
-        <div class="card" style="width: 300px; height: 400px; text-align: center">
-          <img class="card-img-top" style="width: 70%" src="polar.jpg" alt="Card image cap">
-          <div class="card-body">
-            <h5 class="card-title">100% Natural Seltzer Jr</h5>
-            <p class="card-title" style="margin-top: -15px;">Original * 12 x 1L</p>
-            <h3 style="font-weight: bold; color: #00b8a4; margin-top: -10px;">$9.99</h3>
-            <a href="#" class="btn btn-primary" style="display: inline-block; font-weight: bold">Add to Cart</a>
-            <a href="#" class="btn btn-primary" style="display: inline-block; width: 42px">
-              <i class="fas fa-heart"></i>
-            </a>
-          </div>
-        </div>
-
-        <div class="card" style="width: 300px; height: 400px; text-align: center">
-          <img class="card-img-top" style="width: 70%" src="polar.jpg" alt="Card image cap">
-          <div class="card-body">
-            <h5 class="card-title">100% Natural Seltzer Jr</h5>
-            <p class="card-title" style="margin-top: -15px;">Original * 12 x 1L</p>
-            <h3 style="font-weight: bold; color: #00b8a4; margin-top: -10px;">$9.99</h3>
-            <a href="#" class="btn btn-primary" style="display: inline-block; font-weight: bold">Add to Cart</a>
-            <a href="#" class="btn btn-primary" style="display: inline-block; width: 42px">
-              <i class="fas fa-heart"></i>
-            </a>
-          </div>
-        </div>
-
-        <div class="card" style="width: 300px; height: 400px; text-align: center">
-          <img class="card-img-top" style="width: 70%" src="polar.jpg" alt="Card image cap">
-          <div class="card-body">
-            <h5 class="card-title">100% Natural Seltzer Jr</h5>
-            <p class="card-title" style="margin-top: -15px;">Original * 12 x 1L</p>
-            <h3 style="font-weight: bold; color: #00b8a4; margin-top: -10px;">$9.99</h3>
-            <a href="#" class="btn btn-primary" style="display: inline-block; font-weight: bold">Add to Cart</a>
-            <a href="#" class="btn btn-primary" style="display: inline-block; width: 42px">
-              <i class="fas fa-heart"></i>
-            </a>
-          </div>
-        </div>
-
-        <div class="card" style="width: 300px; height: 400px; text-align: center">
-          <img class="card-img-top" style="width: 70%" src="polar.jpg" alt="Card image cap">
-          <div class="card-body">
-            <h5 class="card-title">100% Natural Seltzer Jr</h5>
-            <p class="card-title" style="margin-top: -15px;">Original * 12 x 1L</p>
-            <h3 style="font-weight: bold; color: #00b8a4; margin-top: -10px;">$9.99</h3>
-            <a href="#" class="btn btn-primary" style="display: inline-block; font-weight: bold">Add to Cart</a>
-            <a href="#" class="btn btn-primary" style="display: inline-block; width: 42px">
-              <i class="fas fa-heart"></i>
-            </a>
-          </div>
-        </div>
-
-        <div class="card" style="width: 300px; height: 400px; text-align: center">
-          <img class="card-img-top" style="width: 70%" src="polar.jpg" alt="Card image cap">
-          <div class="card-body">
-            <h5 class="card-title">100% Natural Seltzer Jr</h5>
-            <p class="card-title" style="margin-top: -15px;">Original * 12 x 1L</p>
-            <h3 style="font-weight: bold; color: #00b8a4; margin-top: -10px;">$9.99</h3>
-            <a href="#" class="btn btn-primary" style="display: inline-block; font-weight: bold">Add to Cart</a>
-            <a href="#" class="btn btn-primary" style="display: inline-block; width: 42px">
-              <i class="fas fa-heart"></i>
-            </a>
-          </div>
-        </div>
-
-        <div class="card" style="width: 300px; height: 400px; text-align: center">
-            <img class="card-img-top" style="width: 70%" src="polar.jpg" alt="Card image cap">
-            <div class="card-body">
-              <h5 class="card-title">100% Natural Seltzer Jr</h5>
-              <p class="card-title" style="margin-top: -15px;">Original * 12 x 1L</p>
-              <h3 style="font-weight: bold; color: #00b8a4; margin-top: -10px;">$9.99</h3>
-              <a href="#" class="btn btn-primary" style="display: inline-block; font-weight: bold">Add to Cart</a>
-              <a href="#" class="btn btn-primary" style="display: inline-block; width: 42px">
-                <i class="fas fa-heart"></i>
-              </a>
-            </div>
-          </div>
+      <div id="cardsGoHere" style="display: inline">
 
           <div class="card" style="width: 300px; height: 400px; text-align: center">
               <img class="card-img-top" style="width: 70%" src="polar.jpg" alt="Card image cap">
@@ -242,6 +112,24 @@
                   </a>
                 </div>
               </div>
+
+        <script id="displayProduct" type="text/template">
+          {{#seltzer}}
+          <div class="card" style="width: 100%;">
+            <div class="row">
+              <img class="card-img-top" src="images/{{seltzerID}}.jpg" alt="Card image cap" style="width: 80px; height: 80px; margin-left: 8%">
+              <div style="max-width: 50%">
+                <p style="margin: 0; overflow: hidden; white-space: nowrap; text-overflow: ellipsis;">{{brand}}</p>
+                <p style="margin: 0; overflow: hidden; white-space: nowrap; text-overflow: ellipsis;">{{selzterName}}</p>
+                <p style="margin: 0; overflow: hidden; white-space: nowrap; text-overflow: ellipsis;">{{price}}</p>
+              </div>
+              <div >
+                <i class="fas fa-times" style="font-size: 25px"></i>
+              </div>
+            </div>
+          </div>
+          {{/seltzer}}
+        </script>
 
 
 
@@ -318,30 +206,17 @@
 
     </div>
   </div>
-<script id="displayProduct" type="text/template">
-    {{#seltzer}}
-    <div class="card" style="width: 100%;">
-        <div class="row">
-            <img class="card-img-top" src="images/{{seltzerID}}.jpg" alt="Card image cap" style="width: 80px; height: 80px; margin-left: 8%">
-            <div style="max-width: 50%">
-                <p style="margin: 0; overflow: hidden; white-space: nowrap; text-overflow: ellipsis;">{{brand}}</p>
-                <p style="margin: 0; overflow: hidden; white-space: nowrap; text-overflow: ellipsis;">{{selzterName}}</p>
-                <p style="margin: 0; overflow: hidden; white-space: nowrap; text-overflow: ellipsis;">{{price}}</p>
-            </div>
-            <div >
-                <i class="fas fa-times" style="font-size: 25px"></i>
-            </div>
-        </div>
-    </div>
-    {{/seltzer}}
-</script>
 
-<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/0.7.0/mustache.min.js"></script>-->
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/0.7.0/mustache.min.js"></script>
 <script>
+    window.addEventListener("DOMContentLoaded", function () {
+        loadSeltzers();
+    });
 
     function loadSeltzers() {
         xhr = new XMLHttpRequest();
-        xhr.open('GET', 'seltzer', true);
+        xhr.open('GET', '/seltzer', true);
 
         // Change cursor to wait
         document.body.style.cursor = "wait";
@@ -351,6 +226,8 @@
                 var seltzerData = JSON.parse(this.response);
                 var tmpl = $('#displayProduct');
                 var html = Mustache.render(tmpl, seltzerData);
+                var box = $('#cardsGoHere');
+                box.innerHTML = html;
 
 
                 // for (var i in approvalData) {
@@ -364,7 +241,7 @@
         };
 
         xhr.onerror = function () {
-            console.log("Error getting files from DB for meals of the week");
+            console.log("Error getting seltzer files from DB");
         };
         xhr.send();
     }
