Personal Cart Update

--- a/index.html
+++ b/index.html
@@ -41,6 +41,20 @@
     .card-title {
       color: #7b7b7b;
     }
+
+    .btn:hover {
+      background-color: #53d8ca;
+      border-color: #53d8ca;
+    }
+
+    .btn:focus,
+    .btn:active {
+      outline: #00b8a4 !important;
+      background-color: #00b8a4;
+      box-shadow: none;
+      color:red;
+    }
+
   </style>
 </head>
 
@@ -205,69 +219,56 @@
         </div>
 
         <div class="card" style="width: 300px; height: 400px; text-align: center">
-            <img class="card-img-top" style="width: 70%" src="polar.jpg" alt="Card image cap">
-            <div class="card-body">
-              <h5 class="card-title">100% Natural Seltzer Jr</h5>
-              <p class="card-title" style="margin-top: -15px;">Original * 12 x 1L</p>
-              <h3 style="font-weight: bold; color: #00b8a4; margin-top: -10px;">$9.99</h3>
-              <a href="#" class="btn btn-primary" style="display: inline-block; font-weight: bold">Add to Cart</a>
-              <a href="#" class="btn btn-primary" style="display: inline-block; width: 42px">
-                <i class="fas fa-heart"></i>
-              </a>
-            </div>
+          <img class="card-img-top" style="width: 70%" src="polar.jpg" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">100% Natural Seltzer Jr</h5>
+            <p class="card-title" style="margin-top: -15px;">Original * 12 x 1L</p>
+            <h3 style="font-weight: bold; color: #00b8a4; margin-top: -10px;">$9.99</h3>
+            <a href="#" class="btn btn-primary" style="display: inline-block; font-weight: bold">Add to Cart</a>
+            <a href="#" class="btn btn-primary" style="display: inline-block; width: 42px">
+              <i class="fas fa-heart"></i>
+            </a>
           </div>
+        </div>
 
-          <div class="card" style="width: 300px; height: 400px; text-align: center">
-              <img class="card-img-top" style="width: 70%" src="polar.jpg" alt="Card image cap">
-              <div class="card-body">
-                <h5 class="card-title">100% Natural Seltzer Jr</h5>
-                <p class="card-title" style="margin-top: -15px;">Original * 12 x 1L</p>
-                <h3 style="font-weight: bold; color: #00b8a4; margin-top: -10px;">$9.99</h3>
-                <a href="#" class="btn btn-primary" style="display: inline-block; font-weight: bold">Add to Cart</a>
-                <a href="#" class="btn btn-primary" style="display: inline-block; width: 42px">
-                  <i class="fas fa-heart"></i>
-                </a>
-              </div>
-            </div>
+        <div class="card" style="width: 300px; height: 400px; text-align: center">
+          <img class="card-img-top" style="width: 70%" src="polar.jpg" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">100% Natural Seltzer Jr</h5>
+            <p class="card-title" style="margin-top: -15px;">Original * 12 x 1L</p>
+            <h3 style="font-weight: bold; color: #00b8a4; margin-top: -10px;">$9.99</h3>
+            <a href="#" class="btn btn-primary" style="display: inline-block; font-weight: bold">Add to Cart</a>
+            <a href="#" class="btn btn-primary" style="display: inline-block; width: 42px">
+              <i class="fas fa-heart"></i>
+            </a>
+          </div>
+        </div>
 
-            <div class="card" style="width: 300px; height: 400px; text-align: center">
-                <img class="card-img-top" style="width: 70%" src="polar.jpg" alt="Card image cap">
-                <div class="card-body">
-                  <h5 class="card-title">100% Natural Seltzer Jr</h5>
-                  <p class="card-title" style="margin-top: -15px;">Original * 12 x 1L</p>
-                  <h3 style="font-weight: bold; color: #00b8a4; margin-top: -10px;">$9.99</h3>
-                  <a href="#" class="btn btn-primary" style="display: inline-block; font-weight: bold">Add to Cart</a>
-                  <a href="#" class="btn btn-primary" style="display: inline-block; width: 42px">
-                    <i class="fas fa-heart"></i>
-                  </a>
-                </div>
-              </div>
+        <div class="card" style="width: 300px; height: 400px; text-align: center">
+          <img class="card-img-top" style="width: 70%" src="polar.jpg" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">100% Natural Seltzer Jr</h5>
+            <p class="card-title" style="margin-top: -15px;">Original * 12 x 1L</p>
+            <h3 style="font-weight: bold; color: #00b8a4; margin-top: -10px;">$9.99</h3>
+            <a href="#" class="btn btn-primary" style="display: inline-block; font-weight: bold">Add to Cart</a>
+            <a href="#" class="btn btn-primary" style="display: inline-block; width: 42px">
+              <i class="fas fa-heart"></i>
+            </a>
+          </div>
+        </div>
 
 
       </div>
     </div>
 
-    <div class="col-2" style="float: right; text-align: center; position: fixed; right: 20px; height: 80%; background-color: #efefef">
+    <div class="col-2" style="float: right; text-align: center; position: fixed; right: 20px; height: 80%; background-color: #efefef; z-index:99; ">
 
-      <div class="shadow p-3 mb-5 bg-white" style="margin-right: -20px; margin-left: -22px">
+      <div class="shadow p-3 mb-5 bg-white" style="margin-right: -20px; margin-left: -20px;">
         <h3 style="color: #7b7b7b;">Personal Cart</h3>
       </div>
 
-      <div class="card" style="width: 100%;">
-        <div class="row">
-          <img class="card-img-top" src="polar.jpg" alt="Card image cap" style="width: 80px; height: 80px; margin-left: 8%">
-          <div style="max-width: 50%">
-            <p style="margin: 0; overflow: hidden; white-space: nowrap; text-overflow: ellipsis;">Polar</p>
-            <p style="margin: 0; overflow: hidden; white-space: nowrap; text-overflow: ellipsis;">100% Natural Seltzer Jr</p>
-            <p style="margin: 0; overflow: hidden; white-space: nowrap; text-overflow: ellipsis;">$9.99</p>
-          </div>
-          <div >
-            <i class="fas fa-times" style="font-size: 25px"></i>
-          </div>
-        </div>
-      </div>
-
-      <div class="card" style="width: 100%;">
+      <div id="addToCart" style="margin-top: -47px; max-height: 85%; overflow-y: scroll; z-index:1; overflow-x: hidden;">
+        <div class="card" style="width: 100%;">
           <div class="row">
             <img class="card-img-top" src="polar.jpg" alt="Card image cap" style="width: 80px; height: 80px; margin-left: 8%">
             <div style="max-width: 50%">
@@ -275,25 +276,142 @@
               <p style="margin: 0; overflow: hidden; white-space: nowrap; text-overflow: ellipsis;">100% Natural Seltzer Jr</p>
               <p style="margin: 0; overflow: hidden; white-space: nowrap; text-overflow: ellipsis;">$9.99</p>
             </div>
-            <div >
+            <div>
               <i class="fas fa-times" style="font-size: 25px"></i>
             </div>
           </div>
         </div>
 
         <div class="card" style="width: 100%;">
-            <div class="row">
-              <img class="card-img-top" src="polar.jpg" alt="Card image cap" style="width: 80px; height: 80px; margin-left: 8%">
-              <div style="max-width: 50%">
-                <p style="margin: 0; overflow: hidden; white-space: nowrap; text-overflow: ellipsis;">Polar</p>
-                <p style="margin: 0; overflow: hidden; white-space: nowrap; text-overflow: ellipsis;">100% Natural Seltzer Jr</p>
-                <p style="margin: 0; overflow: hidden; white-space: nowrap; text-overflow: ellipsis;">$9.99</p>
-              </div>
-              <div >
-                <i class="fas fa-times" style="font-size: 25px"></i>
-              </div>
+          <div class="row">
+            <img class="card-img-top" src="polar.jpg" alt="Card image cap" style="width: 80px; height: 80px; margin-left: 8%">
+            <div style="max-width: 50%">
+              <p style="margin: 0; overflow: hidden; white-space: nowrap; text-overflow: ellipsis;">Polar</p>
+              <p style="margin: 0; overflow: hidden; white-space: nowrap; text-overflow: ellipsis;">100% Natural Seltzer Jr</p>
+              <p style="margin: 0; overflow: hidden; white-space: nowrap; text-overflow: ellipsis;">$9.99</p>
+            </div>
+            <div>
+              <i class="fas fa-times" style="font-size: 25px"></i>
             </div>
           </div>
+        </div>
+
+        <div class="card" style="width: 100%;">
+          <div class="row">
+            <img class="card-img-top" src="polar.jpg" alt="Card image cap" style="width: 80px; height: 80px; margin-left: 8%">
+            <div style="max-width: 50%">
+              <p style="margin: 0; overflow: hidden; white-space: nowrap; text-overflow: ellipsis;">Polar</p>
+              <p style="margin: 0; overflow: hidden; white-space: nowrap; text-overflow: ellipsis;">100% Natural Seltzer Jr</p>
+              <p style="margin: 0; overflow: hidden; white-space: nowrap; text-overflow: ellipsis;">$9.99</p>
+            </div>
+            <div>
+              <i class="fas fa-times" style="font-size: 25px"></i>
+            </div>
+          </div>
+        </div>
+
+        <div class="card" style="width: 100%;">
+          <div class="row">
+            <img class="card-img-top" src="polar.jpg" alt="Card image cap" style="width: 80px; height: 80px; margin-left: 8%">
+            <div style="max-width: 50%">
+              <p style="margin: 0; overflow: hidden; white-space: nowrap; text-overflow: ellipsis;">Polar</p>
+              <p style="margin: 0; overflow: hidden; white-space: nowrap; text-overflow: ellipsis;">100% Natural Seltzer Jr</p>
+              <p style="margin: 0; overflow: hidden; white-space: nowrap; text-overflow: ellipsis;">$9.99</p>
+            </div>
+            <div>
+              <i class="fas fa-times" style="font-size: 25px"></i>
+            </div>
+          </div>
+        </div>
+
+        <div class="card" style="width: 100%;">
+          <div class="row">
+            <img class="card-img-top" src="polar.jpg" alt="Card image cap" style="width: 80px; height: 80px; margin-left: 8%">
+            <div style="max-width: 50%">
+              <p style="margin: 0; overflow: hidden; white-space: nowrap; text-overflow: ellipsis;">Polar</p>
+              <p style="margin: 0; overflow: hidden; white-space: nowrap; text-overflow: ellipsis;">100% Natural Seltzer Jr</p>
+              <p style="margin: 0; overflow: hidden; white-space: nowrap; text-overflow: ellipsis;">$9.99</p>
+            </div>
+            <div>
+              <i class="fas fa-times" style="font-size: 25px"></i>
+            </div>
+          </div>
+        </div>
+
+        <div class="card" style="width: 100%;">
+          <div class="row">
+            <img class="card-img-top" src="polar.jpg" alt="Card image cap" style="width: 80px; height: 80px; margin-left: 8%">
+            <div style="max-width: 50%">
+              <p style="margin: 0; overflow: hidden; white-space: nowrap; text-overflow: ellipsis;">Polar</p>
+              <p style="margin: 0; overflow: hidden; white-space: nowrap; text-overflow: ellipsis;">100% Natural Seltzer Jr</p>
+              <p style="margin: 0; overflow: hidden; white-space: nowrap; text-overflow: ellipsis;">$9.99</p>
+            </div>
+            <div>
+              <i class="fas fa-times" style="font-size: 25px"></i>
+            </div>
+          </div>
+        </div>
+
+        <div class="card" style="width: 100%;">
+          <div class="row">
+            <img class="card-img-top" src="polar.jpg" alt="Card image cap" style="width: 80px; height: 80px; margin-left: 8%">
+            <div style="max-width: 50%">
+              <p style="margin: 0; overflow: hidden; white-space: nowrap; text-overflow: ellipsis;">Polar</p>
+              <p style="margin: 0; overflow: hidden; white-space: nowrap; text-overflow: ellipsis;">100% Natural Seltzer Jr</p>
+              <p style="margin: 0; overflow: hidden; white-space: nowrap; text-overflow: ellipsis;">$9.99</p>
+            </div>
+            <div>
+              <i class="fas fa-times" style="font-size: 25px"></i>
+            </div>
+          </div>
+        </div>
+
+        <div class="card" style="width: 100%;">
+          <div class="row">
+            <img class="card-img-top" src="polar.jpg" alt="Card image cap" style="width: 80px; height: 80px; margin-left: 8%">
+            <div style="max-width: 50%">
+              <p style="margin: 0; overflow: hidden; white-space: nowrap; text-overflow: ellipsis;">Polar</p>
+              <p style="margin: 0; overflow: hidden; white-space: nowrap; text-overflow: ellipsis;">100% Natural Seltzer Jr</p>
+              <p style="margin: 0; overflow: hidden; white-space: nowrap; text-overflow: ellipsis;">$9.99</p>
+            </div>
+            <div>
+              <i class="fas fa-times" style="font-size: 25px"></i>
+            </div>
+          </div>
+        </div>
+
+        <div class="card" style="width: 100%;">
+          <div class="row">
+            <img class="card-img-top" src="polar.jpg" alt="Card image cap" style="width: 80px; height: 80px; margin-left: 8%">
+            <div style="max-width: 50%">
+              <p style="margin: 0; overflow: hidden; white-space: nowrap; text-overflow: ellipsis;">Polar</p>
+              <p style="margin: 0; overflow: hidden; white-space: nowrap; text-overflow: ellipsis;">100% Natural Seltzer Jr</p>
+              <p style="margin: 0; overflow: hidden; white-space: nowrap; text-overflow: ellipsis;">$9.99</p>
+            </div>
+            <div>
+              <i class="fas fa-times" style="font-size: 25px"></i>
+            </div>
+          </div>
+        </div>
+
+        <div class="card" style="width: 100%;">
+          <div class="row">
+            <img class="card-img-top" src="polar.jpg" alt="Card image cap" style="width: 80px; height: 80px; margin-left: 8%">
+            <div style="max-width: 50%">
+              <p style="margin: 0; overflow: hidden; white-space: nowrap; text-overflow: ellipsis;">Polar</p>
+              <p style="margin: 0; overflow: hidden; white-space: nowrap; text-overflow: ellipsis;">100% Natural Seltzer Jr</p>
+              <p style="margin: 0; overflow: hidden; white-space: nowrap; text-overflow: ellipsis;">$9.99</p>
+            </div>
+            <div>
+              <i class="fas fa-times" style="font-size: 25px"></i>
+            </div>
+          </div>
+        </div>
+
+
+      </div>
+
+
 
       <a href="#" class="btn btn-primary" style="font-weight: bold; width: 100%; bottom: 0px; position: absolute; right: 0px; height: 65px; font-size: 30px">Checkout</a>
       <!-- <div class="card" style="width: 18rem;">
